2009-03-19 Mohamadou
* add functional tests for erp5_ooo_import .

2008-10-01 fabien
* redefine Selenium.prototype.doType function in user-extensions.js. This is made to be able to test file upload.
* move all things used by other ui_test in erp5_ui_test_core framework

2008-08-29 yusei
* Replace N_ with translateString.

2008-06-17 rafael
* Access Tab has your own scripts to handle preference.

2008-06-16 jerome
* Stop calling BTZuite_setPreference in test and add a docstring to explain its purpose.

2008-06-16 yusei
* Update listbox_zuite/testRedirect for recent changes of domain tree rendering.

2008-06-13 kazuhiko
* modify tests according to the changes of domain tree rendering.

2008-06-10 nicolas
* test custom Relation Form Dialog

2008-05-14 rafael
* Initial zuite for access tab

2008-05-13 jerome
* Initial zuite for matrixbox

2008-02-22 jerome
* Add Zuite_setBaseUrl script which will be called before tests by test runner to set the erp5_ui_test_base_url property, and uses this in templates instead of portal ID.

2008-02-21 kazuhiko
* Add lines_field_zuite.

2007-10-30 yo
* Set pricing_interaction_workflow to Foo Line.

2007-10-09 Fabien
* add setPreferredListboxListModeLineCount(10) to ListBoxZuite_reset to diplay the correct lines number

2007-10-02 Yusei
* Fix planingbox test name.

2007-09-04 Kazuhiko
* use portal_url.getPortalObject().absolute_url() instead of portal_url.getPortalPath() for better virtual host support.

2007-02-13 rafael
* Add planningbox_field_zuite.

2007-02-13 yo
* Add datetime_field_zuite.

2006-12-12 yo
* Add integer_field_zuite.

2006-11-13 Seb
* Add testWorklist

2006-11-09 yo
* Add testReportTreeWithStatMethod.

2006-11-07 Kevin
* New listbox redirection tests.

2006-11-02 aurel
* Call sleep while waiting for activities thus we  reduce cpu and mysql usage to let activities run

2006-09-15 Kevin
* Add new test to check that redirections triggered by the listbox are ok.

2006-09-09 jerome